--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,42 +10,79 @@ a.active {
   left: 0;
   right: 0;
   bottom: 0;
+  color: #fff;
+  font-family: Roboto;
   position: absolute;
   background-image: linear-gradient(158deg, #57b2f2, #e188e8 86%, #f881e7);
 
   .page-title {
-    font-family: Roboto;
     font-size: 40px;
     font-weight: 300;
-    color: #ffffff;
     text-align: center;
   }
 
   .page-subtitle {
-    font-family: Roboto;
     font-size: 14px;
     font-weight: 300;
     text-align: center;
-    color: #ffffff;
     margin-top: -30px;
   }
 
   .price-tag {
     width: 76px;
     height: 76px;
-    background-color: #ffffff;
-    border-radius: 50px;
+    border-radius: 50%;
+    background-color: #fff;
+    margin-bottom: 50px;
+    margin-top: 20px;
 
     p {
-      width: 31px;
-      height: 13px;
-      font-family: Roboto;
-      font-size: 11px;
+      font-size: 18px;
       font-weight: bold;
-      font-style: normal;
-      font-stretch: normal;
       text-align: center;
       color: #7ea6ef;
     }
+
+    p:first-child {
+      font-size: 11px;
+      margin-top: 15px;
+      margin-bottom: -10px;
+    }
+  }
+
+  label {
+    width: 91px;
+    height: 13px;
+    opacity: 0.5;
+    font-family: Roboto;
+    font-size: 11px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    color: #ffffff;
+    text-transform: uppercase;
+    position: absolute;
+  }
+
+  input {
+    margin-right: 20px;
+  }
+
+  .billing-title {
+    font-size: 11px;
+    font-weight: bold;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    text-transform: uppercase;
+  }
+
+  #submit {
+    width: 248px;
+    height: 46px;
+    border-radius: 100px;
+    background-color: #0a163b;
+    box-shadow: 0 0 20px 0 #6f58ab;
+    color: #fff;
   }
 }
