--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,10 @@ a.active {
   color: orange;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .page-title {
   font-family: Roboto;
   font-size: 40px;
@@ -48,4 +52,9 @@ a.active {
   bottom: 0;
   position: absolute;
   background-image: linear-gradient(158deg, #57b2f2, #e188e8 86%, #f881e7);
+}
+
+#landing {
+  // background-image: linear-gradient(156deg, #f39855, #b681f8);
+  width: 75%;
 }
