--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,6 +14,8 @@ a.active {
   font-family: Roboto;
   position: absolute;
   background-image: linear-gradient(158deg, #57b2f2, #e188e8 86%, #f881e7);
+  padding: 5%;
+
 
   .page-title {
     font-size: 40px;
@@ -68,6 +70,10 @@ a.active {
     margin-right: 20px;
   }
 
+  .user-info {
+    width: 75%;
+  }
+
   .billing-title {
     font-size: 11px;
     font-weight: bold;
@@ -77,6 +83,14 @@ a.active {
     text-transform: uppercase;
   }
 
+  .billing-info {
+    width: 75%;
+  }
+
+  .card-info {
+    width: 75%;
+  }
+
   #submit {
     width: 248px;
     height: 46px;
@@ -84,5 +98,7 @@ a.active {
     background-color: #0a163b;
     box-shadow: 0 0 20px 0 #6f58ab;
     color: #fff;
+    margin-top: 50px;
+    margin-bottom: 50px;
   }
 }
