--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -54,7 +54,20 @@ a.active {
   background-image: linear-gradient(158deg, #57b2f2, #e188e8 86%, #f881e7);
 }
 
+#homepage-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  background-image: linear-gradient(156deg, #f39855, #b681f8);
+}
+
 #landing {
   // background-image: linear-gradient(156deg, #f39855, #b681f8);
+  color: #ffffff;
   width: 75%;
 }
