--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -252,3 +252,23 @@ a.active {
 // END of SignaturePad component of ConfirmationPage
 // END of SignaturePad component of ConfirmationPage
 // END of SignaturePad component of ConfirmationPage
+
+.confirmationTitle {
+  width: 359px;
+  height: 47px;
+  font-family: Roboto;
+  font-size: 40px;
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  text-align: center;
+  color: #ffffff;
+}
+
+.Rectangle-5 {
+  width: 218px;
+  height: 38px;
+  text-align: center;
+  border-radius: 19px;
+  border: solid 1px #ffffff;
+}
