--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,14 @@
+html, body, #app  {
+  height: 100%;
+  width: 100%;
+}
+
 a.active {
   color: orange;
+}
+
+#h3billing{
+  padding-right: 80px;
 }
 
 #payment-page {
@@ -14,7 +23,7 @@ a.active {
   font-family: Roboto;
   position: absolute;
   background-image: linear-gradient(158deg, #57b2f2, #e188e8 86%, #f881e7);
-  padding: 5%;
+  padding: 4%;
 
   .page-title {
     font-size: 40px;
