--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -315,3 +315,101 @@ a.active {
   border-radius: 19px;
   border: solid 1px #ffffff;
 }
+
+.step-oval {
+  width: 12px;
+  height: 12px;
+  background-color: clear;
+  box-shadow: 0 0 8px 0 #9c49b0;
+  display: inline-block;
+  margin-left: 14.5px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.step-oval-active {
+  background-color: #ffffff;
+}
+
+.confirmation-stepper {
+  position: absolute;
+  bottom: 110px;
+}
+
+.finish-page {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  background-image: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ),linear-gradient(158deg, #57b2f2, #e188e8 86%, #f881e7);
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+}
+
+.rocket {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 210.4px;
+  height: 210.6px;
+  top: 200px;
+}
+
+.rocket-text {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 430px;
+  width: 524px;
+  height: 70px;
+  font-family: Roboto;
+  font-size: 30px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  text-align: center;
+  color: #ffffff;
+}
+
+#share { 
+  position:absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 500px;
+  width: 397px;
+  height: 56px;
+  border-radius: 28px;
+  background-color: #0a163c;
+  box-shadow: 0 0 20px 0 #7c4f8c;
+  background-color: #0a163b;
+  color: #fff;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  text-decoration: none;
+
+  & > span {
+    display: inline-block;
+    margin-top: 17px;
+  }
+
+}
+
