--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -249,11 +249,64 @@ a.active {
       margin-top: 1em;
     }
 }
-// END of SignaturePad component of ConfirmationPage
-// END of SignaturePad component of ConfirmationPage
-// END of SignaturePad component of ConfirmationPage
 
-.confirmationTitle {
+.m-signature-pad {
+  margin-top: 0px;
+}
+// END of SignaturePad component of ConfirmationPage
+// END of SignaturePad component of ConfirmationPage
+// END of SignaturePad component of ConfirmationPage
+.review-message {
+  width: 400px;
+  height: 16px;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  text-align: center;
+  color: #ffffff;
+}
+
+.disabled-link {
+  pointer-events: none;
+}
+
+.Combined-Shape {
+  width: 13.2px;
+  height: 8px;
+  object-fit: contain;
+  background-color: #ffffff;
+}
+
+.signaturePadHidden {
+  display: none;
+}
+
+.signaturePad {
+  display: block;
+}
+
+.signatureButtonHidden {
+  display: none;
+}
+
+.signatureButton {
+  display: block;
+}
+
+#signature-trigger {
+  width: 692px;
+  height: 104px;
+  border-radius: 54px;
+  background-color: rgba(255, 255, 255, 0.05);
+  border: solid 1px #ffffff;
+  display: block;
+}
+
+
+
+.confirmation-title {
   width: 359px;
   height: 47px;
   font-family: Roboto;
