--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -279,9 +279,9 @@ a.active {
     }
 }
 
-// .m-signature-pad {
-//   margin-top: 0px;
-// }
+.m-signature-pad {
+  margin-top: 0px;
+}
 
 
 #homepage-wrapper {
