--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,6 +6,19 @@ a.active {
   color: orange;
 }
 
+
+.payment-stepper {
+  margin-top: 25px;
+  bottom: 115px;
+  position: absolute;
+}
+
+.page-bottom {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 50px;
+}
+
 #h3billing{
   padding-right: 80px;
 }
@@ -24,7 +37,13 @@ a.active {
   background-image: linear-gradient(158deg, #57b2f2, #e188e8 86%, #f881e7);
   padding: 4%;
 
+  #payment-inputs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 310px;
 
+  }
   .page-title {
     font-size: 40px;
     font-weight: 300;
@@ -120,16 +139,20 @@ a.active {
     }
   }
 
-  #submit {
+  #payment-submit {
+    position: absolute;
     width: 248px;
     height: 46px;
     border-radius: 100px;
     background-color: #0a163b;
     box-shadow: 0 0 20px 0 #6f58ab;
     color: #fff;
-    margin-top: 50px;
+    margin-top: 25px;
     margin-bottom: 50px;
-    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
     bottom: 0;
 
     a {
@@ -370,6 +393,8 @@ a.active {
 .confirmation-stepper {
   position: absolute;
   bottom: 110px;
+  margin-left: -10px;
+
 }
 
 .finish-page {
@@ -448,4 +473,23 @@ a.active {
   }
 
 }
-
+.common-button {
+    width: 248px;
+    height: 46px;
+    border-radius: 100px;
+    background-color: #0a163b;
+    box-shadow: 0 0 20px 0 #6f58ab;
+    color: #fff;
+    margin-top: 10px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+  }
+.first-stepper {
+    text-align: center;
+    display: inline-block;
+    margin-left: 77px;
+    margin-bottom: 15px;
+}
