--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,6 +11,7 @@ a.active {
   margin-top: 25px;
   bottom: 115px;
   position: absolute;
+  margin-left: -4px;
 }
 
 .page-bottom {
@@ -205,7 +206,7 @@ a.active {
   top: 50%;
   left: 50%;
   margin-left: -350px;
-  margin-top: -200px;
+  margin-top: -120px;
   border: 1px solid #e8e8e8;
   background-color: #fff;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.27), 0 0 40px rgba(0, 0, 0, 0.08) inset;
@@ -373,6 +374,10 @@ a.active {
   text-align: center;
   border-radius: 19px;
   border: solid 1px #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
 }
 
 .step-oval {
