--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Pacifico');
+
 a.active {
   color: orange;
 }
@@ -175,7 +177,8 @@ a.active {
   top: 50%;
   left: 50%;
   margin-left: -350px;
-  margin-top: -200px;
+  margin-top: 0px;
+  margin-bottom: 15em;
   border: 1px solid #e8e8e8;
   background-color: #fff;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.27), 0 0 40px rgba(0, 0, 0, 0.08) inset;
@@ -189,8 +192,8 @@ a.active {
   position: absolute;
   left: 20px;
   right: 20px;
-  top: 20px;
-  bottom: 60px;
+  top: 60px;
+  bottom: 20px;
   border: 1px solid #f4f4f4;
 }
 
@@ -280,10 +283,6 @@ a.active {
     }
 }
 
-.m-signature-pad {
-  margin-top: 0px;
-}
-
 #homepage-wrapper {
   display: flex;
   // justify-content: center;
@@ -353,6 +352,7 @@ a.active {
 
 .signaturePad {
   display: block;
+  position: relative;
 }
 
 .signatureButtonHidden {
@@ -370,12 +370,18 @@ a.active {
   background-color: rgba(255, 255, 255, 0.05);
   border: solid 1px #ffffff;
   display: block;
+  font-family: Pacifico;
+  font-size: 40px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  color: #fda5c5;
 }
-
 
 
 .confirmation-title {
   width: 359px;
+  margin-bottom: 0;
   height: 47px;
   font-family: Roboto;
   font-size: 40px;
@@ -386,10 +392,43 @@ a.active {
   color: #ffffff;
 }
 
-.Rectangle-5 {
+.view-text-container {
   width: 218px;
   height: 38px;
   text-align: center;
   border-radius: 19px;
   border: solid 1px #ffffff;
+  margin-top: 10px;
+}
+
+.signature-exit {
+  position: absolute;
+  right: 27em;
+  top: 1em;
+}
+
+.signature-clear {
+  position: absolute;
+  top: 1em;
+}
+
+.signature-submit {
+  position: absolute;
+  left: 27em;
+  top: 1em;
+}
+
+.view-text {
+  width: 152px;
+  height: 16px;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  text-align: center;
+  color: #ffffff;
+  margin: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
