--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,27 @@
 @import url('https://fonts.googleapis.com/css?family=Pacifico');
 
+html, body, #app  {
+}
+
 a.active {
   color: orange;
+}
+
+.payment-stepper {
+  margin-top: 25px;
+  bottom: 115px;
+  position: absolute;
+  margin-left: -4px;
+}
+
+.page-bottom {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 50px;
+}
+
+#h3billing{
+  padding-right: 80px;
 }
 
 #payment-page {
@@ -11,13 +31,20 @@ a.active {
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
   color: #fff;
   font-family: Roboto;
   position: absolute;
   background-image: linear-gradient(158deg, #57b2f2, #e188e8 86%, #f881e7);
-  padding: 5%;
 
+  #payment-inputs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .row {
+      margin-bottom: 20px;
+    }
+  }
 
   .page-title {
     font-size: 40px;
@@ -114,16 +141,20 @@ a.active {
     }
   }
 
-  #submit {
+  #payment-submit {
+    position: absolute;
     width: 248px;
     height: 46px;
     border-radius: 100px;
     background-color: #0a163b;
     box-shadow: 0 0 20px 0 #6f58ab;
     color: #fff;
-    margin-top: 50px;
+    margin-top: 25px;
     margin-bottom: 50px;
-    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
     bottom: 0;
 
     a {
@@ -318,6 +349,12 @@ a.active {
 }
 
 #continue-button {
+  width: 248px;
+  height: 46px;
+  border-radius: 100px;
+  border: none;
+  background-color: #816088;
+  box-shadow: 0 0 20px 0 #a867a6;
 }
 
 // END of SignaturePad component of ConfirmationPage
@@ -424,11 +461,130 @@ a.active {
   font-family: Roboto;
   font-size: 14px;
   font-weight: bold;
-  font-style: normal;
-  font-stretch: normal;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+
+  & > a {
+    text-decoration: none;
+  }
+}
+
+.step-oval {
+  width: 12px;
+  height: 12px;
+  background-color: clear;
+  box-shadow: 0 0 8px 0 #9c49b0;
+  display: inline-block;
+  margin-left: 14.5px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.step-oval-active {
+  background-color: #ffffff;
+}
+
+.confirmation-stepper {
+  position: absolute;
+  bottom: 110px;
+  margin-left: -10px;
+}
+
+.finish-page {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  background-image: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ),linear-gradient(158deg, #57b2f2, #e188e8 86%, #f881e7);
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.rocket {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 210.4px;
+  height: 210.6px;
+  top: 200px;
+}
+
+.rocket-text {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 430px;
+  width: 524px;
+  height: 70px;
+  font-family: Roboto;
+  font-size: 30px;
+  font-weight: normal;
   text-align: center;
   color: #ffffff;
   margin: auto;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+#share {
+  position:absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 500px;
+  width: 397px;
+  height: 56px;
+  border-radius: 28px;
+  background-color: #0a163c;
+  box-shadow: 0 0 20px 0 #7c4f8c;
+  background-color: #0a163b;
+  color: #fff;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  text-decoration: none;
+
+  & > span {
+    display: inline-block;
+    margin-top: 17px;
+  }
+
+}
+.common-button {
+    width: 248px;
+    height: 46px;
+    border-radius: 100px;
+    background-color: #0a163b;
+    box-shadow: 0 0 20px 0 #6f58ab;
+    color: #fff;
+    margin-top: 10px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+  }
+.first-stepper {
+    text-align: center;
+    display: inline-block;
+    margin-left: 77px;
+    margin-bottom: 15px;
 }
