took out consolelogs, fixed eslint errors, added comments for readability

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -183,20 +183,20 @@ a.active {
   overflow: scroll;
 
   #submit {
-    position: absolute;
-    width: 248px;
-    height: 46px;
-    border-radius: 100px;
-    background-color: #0a163b;
-    box-shadow: 0 0 20px 0 #6f58ab;
-    color: #fff;
+    // position: absolute;
+    // width: 248px;
+    // height: 46px;
+    // border-radius: 100px;
+    // background-color: #0a163b;
+    // box-shadow: 0 0 20px 0 #6f58ab;
+    // color: #fff;
     margin-top: 50px;
-    margin-bottom: 50px;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
+    // margin-bottom: 50px;
+    // bottom: 0;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // text-decoration: none;
   }
 }
 
@@ -456,7 +456,7 @@ a.active {
 }
 
 .view-text {
-  width: 152px;
+  margin-top: 1em;
   height: 16px;
   font-family: Roboto;
   font-size: 14px;
